--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
     "@types/pug": "^2.0.6",
+    "@types/ws": "^8.5.5",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
@@ -18,10 +19,11 @@
     "@types/node": "^20.5.1",
     "bootstrap": "^5.3.1",
     "bootstrap-table": "^1.22.1",
-    "htmx.org": "^1.9.4",
+    "htmx.org": "^1.9.5",
     "jquery": "^3.7.0",
     "pug": "^3.0.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ws": "^8.13.0"
   },
   "license": "MIT"
 }
